# cube-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/: basic.frag  basic.vert
scripts/: start-editor.sh
src/: epch.hpp  main.cpp
src/Entities/: Camera.cpp  Camera.hpp
src/core/: Input.cpp  Input.h  Log.h  Window.cpp  Window.hpp
src/core/Components/: Component.cpp  Component.hpp  InputCapture.cpp  InputCapture.h
src/core/Input/: Input.cpp  Input.h
src/core/graphics/: Buffer.hpp  Buffers.cpp  Buffers.hpp  Object.cpp  Object.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/core/graphics/API/: Buffers.cpp  Buffers.hpp
src/core/graphics/API/Shader/: Shader.cpp  Shader.hpp
src/core/graphics/Shader/: Shader.cpp  Shader.hpp  Uniforms.hpp
src/core/world/: Camera.cpp  Camera.hpp
src/util/: FileIO.cpp  FileIO.hpp  Log.h  StringUtils.cpp  StringUtils.hpp
